@@ -1,3 +1,5 @@
+Smarten up message dialogs.
+
 1.4
 
 Remove applet; applets essentially don't work on the modern web.
